--- a/public/styles/write_detail.css
+++ b/public/styles/write_detail.css
@@ -199,6 +199,8 @@ main{
 .review_form>p:nth-of-type(1) {
 	font-size: 1.8rem;
 	font-weight: 700;
+	padding: 20px 0;
+	border-bottom: 1px solid #aaaaaa;
 }
 .check_score {
 	display: flex;
