--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -3,6 +3,9 @@
 .mo_none{
   display: none;
 }
+.content-font{
+  font-size: 1.4rem;
+}
 
 /* header end */
 main{
@@ -66,7 +69,8 @@ main{
 .login_option{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-end;
+  gap: 10px;
   margin-top: 8px;
 }
 .save_id>input{
@@ -107,8 +111,87 @@ main{
 }
 /* main end */
 
+/* 아이디/비밀번호 찾기 모달 */
+.search-info{
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  background-color: #fff;
+}
+.search-info>fieldset{
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #efefef;
+  gap: 20px;
+}
+.form-item{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 15px;
+}
+.form-item>label{
+  width: fit-content;
+  white-space: nowrap;
+  line-height: 37.5px;
+}
+.form-item>div{
+  width: 100%;
+}
+.form-item input{
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #fff;
+  border: 1px solid #aaa;
+}
+.form-item-input{
+  display: flex;
+  flex-direction: row;
+}
+.return-userid{
+  width: 100%;
+  font-size: 1.4rem;
+  line-height: 37.5px;
+  word-wrap: break-word;
+  word-break: break-all;
+  white-space: normal;
+}
+.search-info>fieldset button{
+  margin-left: auto;
+  width: 60px;
+  height: 37.5px;
+  border-radius: 5px;
+  background: linear-gradient(0deg, #ccc 0%, #ccc 100%);
+  color: #444;
+  cursor: pointer;
+}
+.search-info>fieldset button:hover{
+  background: #6269f5;
+  color: #fff;
+}
+.checkmsg{
+  padding: 0 12px;
+  font-size: 1.2rem;
+  margin-top: 5px;
+  overflow-wrap: break-word;
+  color: #f44;
+}
+
+
 /* 테블릿 768 사이즈 반응형 */
 @media screen and (min-width: 768px) {
+  .tab_none{
+    display: none;
+  }
+  .tab_show{
+    display: block;
+  }
   .login_box{
     flex-direction: row;
     gap: 8px;
@@ -121,6 +204,10 @@ main{
     height: 100px;
     padding: 20px;
   }
+  .form-item{
+    width: 440px;
+  }
+
 }
 /* PC 1024 사이즈 반응형 */
 @media screen and (min-width: 1024px){
