--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -62,6 +62,10 @@ button{
   background-size: 10px 10px;
   font-size: 1.4rem;
 }
+.search option{
+  background-color: rgba(255, 255, 255, 0);
+  color: rgba(255, 255, 255, 0.8);
+}
 .search input{
   width: calc(100% - 70px);
   margin: 0 0 0 10px;
@@ -138,7 +142,7 @@ input:-webkit-autofill:active {
   gap: 15px;
   font-size: 1.2rem;
 }
-.review>div>span:nth-of-type(2){
+.review>div>span:nth-of-type(2), .review>div>span:nth-of-type(3){
   color: #888;
 }
 .review>p{
@@ -152,7 +156,8 @@ input:-webkit-autofill:active {
   position: absolute;
   right: 48px;
   top: 28px;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
+  font-weight: 700;
   cursor: pointer;
 }
 .top-score{
