--- a/public/styles/mypage.css
+++ b/public/styles/mypage.css
@@ -151,7 +151,7 @@ section {
   padding: 10px 20px;
   border-radius: 5px;
   background: linear-gradient(0deg, #ccc 0%, #ccc 100%);
-  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.4);
+  border: 1px solid rgba(0, 0, 0, 0.4);
   color: #444;
   font-size: 1.4rem;
   cursor: pointer;
@@ -171,7 +171,7 @@ section {
   padding: 10px 20px;
   background: #fff;
   border-radius: 5px;
-  border: 0px 0px 2px 0px #aaa;
+  border: 1px solid #aaa;
   color: #444;
   font-size: 1.4rem;
 }
@@ -268,7 +268,7 @@ section {
   padding: 10px 20px;
   background-color: #efefef;
   border-radius: 5px;
-  box-shadow: 0px 0px 2px 0px #aaa;
+  border: 1px solid #aaa;
   color: #444;
 }
 .career-wrap .career-contents .career-content fieldset .career-item .career-corplist {
@@ -446,7 +446,7 @@ section {
   padding: 10px 20px;
   border-radius: 5px;
   background-color: #fff;
-  box-shadow: 0px 0px 2px 0px #6269F5;
+  border: 1px solid #6269F5;
 }
 .pw-modal-box .pw-modal-wrap .change-pw fieldset .pw-item > div > div {
   padding: 0 12px;
