feat: 리뷰이벤트 배너 추가

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -324,6 +324,14 @@ input:-webkit-autofill:active {
   right: 17px;
   bottom: 0px;
 }
+.event-banner{
+  width: 80%;
+  height: 120px;
+  background: #a0a6ff url(/styles/images/banner_reviewEvent_mo.svg) no-repeat center/contain;
+  margin: 0 auto;
+  margin-top: 60px;
+  border-radius: 5px;
+}
 .second-contents{
   width: 100%;
   margin: 0 auto;
@@ -632,6 +640,10 @@ input:-webkit-autofill:active {
     height: 100px;
     right: 28px;
   }
+  .event-banner{
+    width: 86%;
+    background: #a0a6ff url(/styles/images/banner_reviewEvent_tab.svg) no-repeat center/contain;
+  }
   .second-contents{
     padding: 40px 7% 0;
   }
@@ -702,6 +714,9 @@ input:-webkit-autofill:active {
   .top-score-item{
     width: 100%;    
   }
+  .event-banner{
+    height: 160px;
+  }
   .second-contents h1{
     font-size: 2.0rem;
   }
@@ -733,6 +748,9 @@ input:-webkit-autofill:active {
     width: 67%;
   }
   .top-score-banner{
+    width: 67%;
+  }
+  .event-banner{
     width: 67%;
   }
   .second-contents{
