--- a/public/styles/webcomponent.css
+++ b/public/styles/webcomponent.css
@@ -2,240 +2,263 @@
 
 /* mobile */
 /* z-index (.modal : 10) (.nav_wrap : 11) */
-#header_wrap{
+#header_wrap {
   position: fixed;
-  right: 0;left: 0;
-  width:100%;
-  height: 120px;;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 120px;
   z-index: 9;
   background: #fafafa;
 }
-.modal{
-  position:fixed;
-  top:0;left:0;
-  width:100%;height:100%;
-  background-color:#fff;
-  display:none;
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  display: none;
   z-index: 10;
 }
-header{
+header {
   width: 80%;
-  display:flex;
+  display: flex;
   justify-content: space-between;
-  margin:0 auto;
+  margin: 0 auto;
   margin-top: 60px;
-  height: 28px;;
-  line-height:1.6;
+  height: 28px;
+  line-height: 1.6;
 }
-header>h1{
-  width:120px;
-  height:37px;
+header > h1 {
+  width: 120px;
+  height: 37px;
 }
-header>h1>a{
-  display:block;
-  width:120px;
-  height:37px;
+header > h1 > a {
+  display: block;
+  width: 120px;
+  height: 37px;
   background: url(images/logo_NeedU.png) no-repeat center/95%;
 }
-.nav_wrap{
+.nav_wrap {
   z-index: 11;
-  position:relative;
+  position: relative;
 }
-nav{
-  display:none;
-  width:100%;
+nav {
+  display: none;
+  width: 100%;
 }
-.btn_ham_gnb{
-  position:absolute;
-  top:0; right:0;
+.btn_ham_gnb {
+  position: absolute;
+  top: 0;
+  right: 0;
   width: 32px;
-  cursor:pointer;
+  cursor: pointer;
 }
-.btn_ham_gnb span{
-  display:block;
-  width:100%;
-  height:2px;
-  margin-bottom:8px;
-  background-color:#000;
-  border-radius:4px;
+.btn_ham_gnb span {
+  display: block;
+  width: 100%;
+  height: 2px;
+  margin-bottom: 8px;
+  background-color: #000;
+  border-radius: 4px;
 }
-.gnb_wrap{
-  margin-top:60px;
-  width:100%;
-  margin-right:60px;
+.gnb_wrap {
+  margin-top: 60px;
+  width: 100%;
+  margin-right: 60px;
 }
-.gnb_search{
-  width:100%;
+.gnb_search {
+  width: 100%;
 }
-.gnb_search>form{
-  padding-bottom:8px;
-  border-bottom:1px solid #000dff;
-  display:flex;
+.gnb_search > form {
+  padding-bottom: 8px;
+  border-bottom: 1px solid #000dff;
+  display: flex;
   justify-content: space-between;
 }
-input{
-  border:none;
+input {
+  border: none;
   outline: none;
 }
-.search_text{
+.search_text {
   width: calc(100% - 25px);
-  font-size:1.6rem;
+  font-size: 1.6rem;
   background: none;
 }
-.search_text::placeholder{
-  color:rgba(0,0,0,0.3)
+.search_text::placeholder {
+  color: rgba(0, 0, 0, 0.3);
 }
-.btn_search{
-  width:21px;
-  height:21px;
-  background:url(images/btn_search.png) no-repeat center/contain;
+.btn_search {
+  width: 21px;
+  height: 21px;
+  background: url(images/btn_search.png) no-repeat center/contain;
   cursor: pointer;
 }
 
-.gnb li{
-  margin-bottom:60px;
-  margin-top:60px;
-  font-size:1.8rem;
+.gnb li {
+  margin-bottom: 60px;
+  margin-top: 60px;
+  font-size: 1.8rem;
 }
-.gnb li a{
-  display:block;
-  width:100%;
-  height:fit-content;
-  line-height:1.8;
+.gnb li a {
+  display: block;
+  width: 100%;
+  height: fit-content;
+  line-height: 1.8;
 }
-.gnb li a::after{
-  content:"";
-  display:inline-block;
-  width:7px; height:14px;
-  margin-left:12px;
-  background:url(images/ico_arrow_R.png) no-repeat bottom/contain;
+.gnb li a::after {
+  content: '';
+  display: inline-block;
+  width: 7px;
+  height: 14px;
+  margin-left: 12px;
+  background: url(images/ico_arrow_R.png) no-repeat bottom/contain;
 }
-.usersign{
-  margin-top:80px; /* 중첩돼서 80px로 구현됨 */
-  display:flex;
-  font-size:1.8rem;
+.usersign {
+  margin-top: 80px; /* 중첩돼서 80px로 구현됨 */
+  display: flex;
+  font-size: 1.8rem;
   justify-content: space-between;
 }
-.usersign a{
-  display:block;
-  line-height:1.8;
+.usersign a {
+  display: block;
+  line-height: 1.8;
 }
-.login::before{
-  content:"";
-  display:inline-block;
-  transform:translateY(4px);
-  width:18px; height:18px;
-  margin-right:3px;
-  background:url(images/ico_login.png) no-repeat center/contain;
+.login::before {
+  content: '';
+  display: inline-block;
+  transform: translateY(4px);
+  width: 18px;
+  height: 18px;
+  margin-right: 3px;
+  background: url(images/ico_login.png) no-repeat center/contain;
 }
-.signup::before{
-  content:"";
-  display:inline-block;
-  transform:translateY(4px);
-  width:18px; height:18px;
-  margin-right:3px;
-  background:url(images/ico_signup.png) no-repeat center/contain;
+.signup::before {
+  content: '';
+  display: inline-block;
+  transform: translateY(4px);
+  width: 18px;
+  height: 18px;
+  margin-right: 3px;
+  background: url(images/ico_signup.png) no-repeat center/contain;
 }
-.nickname{
+.nickname {
   display: inline-block !important;
   width: calc(100% - 30px);
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.nickname::before{
-  content:"";
-  display:inline-block;
-  transform:translateY(4px);
-  width:18px; height:18px;
-  margin-right:3px;
-  background:url(images/ico_login.png) no-repeat center/contain;
+.nickname::before {
+  content: '';
+  display: inline-block;
+  transform: translateY(4px);
+  width: 18px;
+  height: 18px;
+  margin-right: 3px;
+  background: url(images/ico_login.png) no-repeat center/contain;
 }
-.logout::before{
-  content:"";
-  display:inline-block;
-  transform:translateY(4px);
-  width:18px; height:18px;
-  margin-right:3px;
-  background:url(images/ico_logout.png) no-repeat center/contain;
+.logout::before {
+  content: '';
+  display: inline-block;
+  transform: translateY(4px);
+  width: 18px;
+  height: 18px;
+  margin-right: 3px;
+  background: url(images/ico_logout.png) no-repeat center/contain;
 }
-.logout span{
+.logout span {
   display: none;
 }
-footer{
+footer {
   position: relative;
   width: 100%;
-  height: 200px;
-  font-size: 1.2rem;
+  height: 280px;
+  font-size: 1.4rem;
   transform: translateY(-100%);
+  margin-bottom: 50px;
 }
-footer-component{
+footer-component {
   display: flex;
   width: 80%;
   margin: 0 auto;
   flex-direction: column;
 }
-.footer_main{
-  display: flex;
-  align-items: end;
-  flex-wrap: wrap;
-  height: auto;
-  padding: 20px 0 ;
-  gap: 20px;
+.footer_main {
+  padding: 20px 0;
   border-bottom: 1px solid rgba(0, 13, 255, 0.1);
 }
-.footer_contact{
+.footer_main > div {
+  max-width: 350px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: auto;
+}
+.footer_ico {
+  max-width: 288px;
+  height: 38px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+.footer_logo {
+  width: 120px;
+  height: 38px;
+  background: url(images/footer_logo.svg) no-repeat center;
+}
+.ico_sns {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 16px;
+}
+.ico_sns > a {
+  height: 26px;
+}
+.footer_contact {
   display: flex;
   align-items: end;
   flex-wrap: wrap;
   height: auto;
-  gap: 20px;
-  padding: 20px 0 ;
+  padding: 20px 0;
+  row-gap: 10px;
 }
-.footer_logo{
-  width: 70px;
-  height: 33.5px;
-  padding: 20px 0 ;
-  background: url(images/logo_NeedU.png) no-repeat center/95%;
-}
-.footer_data{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-.footer_data>span{
-  line-height: 20px;
-}
-.footer_data>span:not(:last-child)::after{
+.footer_contact > span:not(:last-child)::after {
   content: '|';
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
+
 .btn_toTop {
-	position: fixed;
-	width: 40px;
-	height: 40px;
-	right: calc(10% + 10px);
-	bottom: 7%;
-	background: url(./images/toTop_gray.png) no-repeat center;
-	background-size: 100%;
-	border-radius: 60px;
-	cursor:pointer;
-	z-index: 9;
+  position: fixed;
+  width: 40px;
+  height: 40px;
+  right: calc(10% + 10px);
+  bottom: 7%;
+  background: url(./images/toTop_gray.png) no-repeat center;
+  background-size: 100%;
+  border-radius: 60px;
+  cursor: pointer;
+  z-index: 9;
 }
 
 /* 모달 */
-.modal-box{
+.modal-box {
   display: flex;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.2);
+  background: rgba(0, 0, 0, 0.2);
   z-index: 11;
 }
-.modal-wrap{
+.modal-wrap {
   position: fixed;
   width: 80%;
   height: auto;
@@ -244,18 +267,19 @@ footer-component{
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
 }
-.modal-wrap>div:nth-of-type(1){
+.modal-wrap > div:nth-of-type(1) {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 20px;
   height: 30px;
-  background: #6269F5;
+  background: #6269f5;
   border-radius: 5px 5px 0px 0px;
   font-size: 1.4rem;
   color: #ffffff;
 }
-.modal-box .Corp_data, .modal-content{
+.modal-box .Corp_data,
+.modal-content {
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -263,48 +287,49 @@ footer-component{
   background: #ffffff;
   font-size: 1.2rem;
 }
-.modal-content{
+.modal-content {
   font-size: 1.8rem;
   text-align: center;
   padding: 40px;
 }
-.modal-box .Corp_data>div{
+.modal-box .Corp_data > div {
   display: flex;
   justify-content: space-between;
   gap: 20px;
 }
-.modal-box .Corp_data>div>label{
+.modal-box .Corp_data > div > label {
   font-weight: 700;
   color: #000;
 }
-.modal-box .Corp_data>div>input{
+.modal-box .Corp_data > div > input {
   width: 70%;
   height: 30px;
   padding: 5px 10px;
   border: 1px solid #aaaaaa;
   border-radius: 5px;
 }
-.modal-box .Corp_data>div>input::placeholder{
+.modal-box .Corp_data > div > input::placeholder {
   color: #aaaaaa;
 }
-.modal-box .Corp_data>div>div{
+.modal-box .Corp_data > div > div {
   width: 70%;
   height: 30px;
   display: flex;
   justify-content: space-between;
 }
-.modal-box .Corp_data>div>div>select{
+.modal-box .Corp_data > div > div > select {
   width: 45%;
   padding: 5px 10px;
   border: 1px solid #aaaaaa;
   border-radius: 5px;
-  font-size: 1.0rem;
+  font-size: 1rem;
   color: #000;
   appearance: none;
   background: url(images/btn_select.png) no-repeat right 12px center;
   background-size: 12px 9px;
 }
-.btn_modalSubmit, .modal-btn-wrap{
+.btn_modalSubmit,
+.modal-btn-wrap {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -312,198 +337,187 @@ footer-component{
   background: #eeeeee;
   border-radius: 0px 0px 5px 5px;
 }
-.modal-btn-wrap{
+.modal-btn-wrap {
   justify-content: space-between;
 }
-.modal-btn-wrap>button{
+.modal-btn-wrap > button {
   width: 40%;
   max-width: 180px;
   height: 38px;
   padding: 8px;
   font-size: 1.4rem;
   color: #fff;
-  background: #6269F5;
+  background: #6269f5;
   border-radius: 5px;
 }
-.modal-btn-wrap>button:nth-of-type(2){
+.modal-btn-wrap > button:nth-of-type(2) {
   background: #888;
 }
-.modal_cancel>img{
+.modal_cancel > img {
   width: 20px;
   height: 20px;
   cursor: pointer;
 }
-.modal_submit{
+.modal_submit {
   width: 30%;
   max-width: 180px;
   height: 30px;
-  background: #6269F5;
+  background: #6269f5;
   border-radius: 5px;
   color: #ffffff;
   font-size: 1.2rem;
   cursor: pointer;
 }
 
-
 /* mobile-end */
 
-@media screen and (min-width:768px) {
-header{
-  width:86%;
-}
-.nav_wrap{
-  width:100%;
-}
-.btn_ham_gnb{
-  display:none;
-}
-nav{
-  display:block !important;
-  display:flex !important;
-  justify-content: space-between !important;
-}
-.gnb_wrap{
-  margin:0;
-  width:fit-content;
-  display:flex;
-  justify-content: flex-end;
-  flex-flow: row-reverse;
-}
-.gnb_search{
-  margin-top:4px;
-  margin-left: 20px;
-  width:fit-content;
-  min-width: 180px;
-  height:28px;
-}
-.gnb{
-  display:flex;
-  min-width:fit-content;
-} /* ul */
-.gnb li{
-  margin:0;
-  margin-left:40px;
-}
-.gnb li a::after{
-  display:none;
-}
-.usersign{
-  margin:0;
-  width: fit-content;
-  justify-content: space-around;
-}
-.usersign a{
-  margin:0;
-}
-.login::before{
-  display:none;
-}
-.signup::before{
-  display:none;
-}
-/* .nickname::before{
+@media screen and (min-width: 768px) {
+  header {
+    width: 86%;
+  }
+  .nav_wrap {
+    width: 100%;
+  }
+  .btn_ham_gnb {
+    display: none;
+  }
+  nav {
+    display: block !important;
+    display: flex !important;
+    justify-content: space-between !important;
+  }
+  .gnb_wrap {
+    margin: 0;
+    width: fit-content;
+    display: flex;
+    justify-content: flex-end;
+    flex-flow: row-reverse;
+  }
+  .gnb_search {
+    margin-top: 4px;
+    margin-left: 20px;
+    width: fit-content;
+    min-width: 180px;
+    height: 28px;
+  }
+  .gnb {
+    display: flex;
+    min-width: fit-content;
+  } /* ul */
+  .gnb li {
+    margin: 0;
+    margin-left: 40px;
+  }
+  .gnb li a::after {
+    display: none;
+  }
+  .usersign {
+    margin: 0;
+    width: fit-content;
+    justify-content: space-around;
+  }
+  .usersign a {
+    margin: 0;
+  }
+  .login::before {
+    display: none;
+  }
+  .signup::before {
+    display: none;
+  }
+  /* .nickname::before{
   display:none;
 } */
-.nickname{
-  width: auto;
-}
-.logout{
-  display: inline-block !important;
-}
-.logout span{
-  display: none;
-}
-.usersign a:first-child{
-  margin-right:20px;
-}
+  .nickname {
+    width: auto;
+  }
+  .logout {
+    display: inline-block !important;
+  }
+  .logout span {
+    display: none;
+  }
+  .usersign a:first-child {
+    margin-right: 20px;
+  }
 
-footer-component{
-  width:86%;
-  border-bottom: 1px solid rgba(0, 13, 255, 0.1);
-}
-.footer_wrap{
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-}
-.footer_main{
-  border-bottom: none;
-}
-.btn_toTop {
-  right: calc(10% + 20px);
-}
+  footer-component {
+    width: 86%;
+  }
+  .btn_toTop {
+    right: calc(10% + 20px);
+  }
 
-/* 기관등록 모달 */
-.modal-wrap>div:nth-of-type(1){
-  height: 68px;
-  font-size: 2.0rem;
-}
-.modal-box .Corp_data{
-  padding: 40px;
-  gap: 40px;
-  font-size: 1.8rem;
-}
-.modal-box .Corp_data>div>input{
-  max-width: 468px;
-  height: 54px;
-  padding: 17px 20px;
-  font-size: 1.8rem;
-}
-.modal-box .Corp_data>div>div{
-  max-width: 468px;
-  height: 54px;
-}
-.modal-box .Corp_data>div>div>select{
-  width: 45%;
-  padding: 17px 20px;
-  font-size: 1.8rem;
-}
-.btn_modalSubmit{
-  padding: 20px 28px;
-  height: 94px;
-}
-.modal_cancel{
-  height: 54px;
-  font-size: 1.8rem;
-}
-.modal_submit{
-  height: 54px;
-  font-size: 1.8rem;
-}
-
+  /* 기관등록 모달 */
+  .modal-wrap > div:nth-of-type(1) {
+    height: 68px;
+    font-size: 2rem;
+  }
+  .modal-box .Corp_data {
+    padding: 40px;
+    gap: 40px;
+    font-size: 1.8rem;
+  }
+  .modal-box .Corp_data > div > input {
+    max-width: 468px;
+    height: 54px;
+    padding: 17px 20px;
+    font-size: 1.8rem;
+  }
+  .modal-box .Corp_data > div > div {
+    max-width: 468px;
+    height: 54px;
+  }
+  .modal-box .Corp_data > div > div > select {
+    width: 45%;
+    padding: 17px 20px;
+    font-size: 1.8rem;
+  }
+  .btn_modalSubmit {
+    padding: 20px 28px;
+    height: 94px;
+  }
+  .modal_cancel {
+    height: 54px;
+    font-size: 1.8rem;
+  }
+  .modal_submit {
+    height: 54px;
+    font-size: 1.8rem;
+  }
 }
 /* 768 end */
 /* 1024 */
-@media screen and (min-width:1024px) {
-/* .gnb_wrap{
+@media screen and (min-width: 1024px) {
+  /* .gnb_wrap{
   width:75%;
 } */
-.gnb_search{
-  width:36%;
+  .gnb_search {
+    width: 36%;
+  }
+  .logout::before {
+    display: none;
+  }
+  .logout {
+    min-width: 66px;
+  }
+  .logout span {
+    display: block;
+    width: auto;
+  }
+  footer {
+    font-size: 1.4rem;
+  }
 }
-.logout::before{
-  display:none;
-}
-.logout{
-  min-width: 66px;
-}
-.logout span{
-  display: block;
-  width: auto;
-}
-footer{
-  font-size: 1.4rem;
-}
-}
-@media screen and (min-width:1280px){
-header{
-  width:67%;
-}
-/* .usersign{
+@media screen and (min-width: 1280px) {
+  header {
+    width: 67%;
+  }
+  /* .usersign{
   width: 20%;
 } */
 
-footer-component{
-  width:67%;
-}
+  footer-component {
+    width: 67%;
+  }
 }
