--- a/public/styles/chat_complete.scss
+++ b/public/styles/chat_complete.scss
@@ -9,7 +9,7 @@ main {
   }
 }
 section {
-  margin: 0 auto;
+  margin: 0 40px;
   margin-top: 80px;
   max-width: 740px;
   display: flex;
@@ -17,7 +17,7 @@ section {
   align-items: center;
   h1 {
     color: #444;
-    font-size: 2.4rem;
+    font-size: 1.8rem;
     font-weight: 700;
   }
   & > div {
@@ -35,17 +35,15 @@ section {
     gap: 20px;
     .item {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
+      gap: 4px;
       color: #444;
-      font-size: 2rem;
+      font-size: 1.4rem;
       & > div:nth-of-type(1) {
-        width: 120px;
+        width: 150px;
         font-weight: 700;
       }
       & > div:nth-of-type(2) {
-        margin: 0 10px;
-      }
-      & > div:nth-of-type(3) {
         font-weight: 400;
         flex: 1;
       }
@@ -59,35 +57,91 @@ section {
     }
     & > p {
       color: #444;
-      font-size: 1.6rem;
+      font-size: 1.3rem;
       font-weight: 400;
       margin-top: 5px;
       margin-left: 20px;
     }
     .payment-content {
-      font-size: 2rem;
+      font-size: 1.4rem;
       font-weight: 400;
       margin-top: 20px;
       display: flex;
       flex-direction: row;
-      align-items: center;
+      align-items: flex-start;
       gap: 5px;
+      line-height: 20px;
     }
   }
   & > button {
     margin-top: 60px;
-    margin-bottom: 100px;
-    padding: 20px 30px;
-    width: 280px;
+    margin-bottom: 200px;
+    padding: 19px 28px;
+    width: 295px;
     height: 60px;
     border-radius: 4px;
     background: #aaa;
     color: #fafafa;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: 700;
     cursor: pointer;
     &:hover {
       background: #6269f5;
+    }
+  }
+}
+
+/* 테블릿 768 사이즈 반응형 */
+@media screen and (min-width: 768px) {
+  section {
+    margin: 0 auto;
+    margin-top: 80px;
+    min-width: 660px;
+    h1 {
+      font-size: 2rem;
+    }
+    .info-box {
+      .item {
+        flex-direction: row;
+        font-size: 1.8rem;
+      }
+    }
+    .payment {
+      & > p {
+        font-size: 1.4rem;
+      }
+      .payment-content {
+        font-size: 1.8rem;
+      }
+    }
+  }
+}
+
+/* PC 1024 사이즈 반응형 */
+@media screen and (min-width: 1024px) {
+  section {
+    h1 {
+      font-size: 2.4rem;
+    }
+    .info-box {
+      .item {
+        font-size: 2rem;
+        & > div:nth-of-type(1) {
+          width: 200px;
+        }
+      }
+    }
+    .payment {
+      & > p {
+        color: #444;
+        font-size: 1.6rem;
+      }
+      .payment-content {
+        font-size: 2rem;
+      }
+    }
+    & > button {
+      font-size: 2rem;
     }
   }
 }
